src/objects/JBCXM__Dashboard__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__FilterConditions__c</fullName>
        <label>Layout Options</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__GlobalFilters__c</fullName>
        <label>Global Filter options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__LayoutType__c</fullName>
        <label>Layout Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ReportSection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReportSection</label>
        <referenceTo>JBCXM__ReportSection__c</referenceTo>
        <relationshipLabel>ReportSection</relationshipLabel>
        <relationshipName>ReportSection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dashboards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Visibility__c</fullName>
        <label>Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dashboard</label>
    <nameField>
        <label>Dashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>